# hacker-notes-s26m04

./: README.md
FEDPOL/: g.unizh--0.0.8.txt  m.unizh--0.0.8.txt
buero/: .~lock.budget.2026.05.ods#  budget.2025.08.ods  budget.2025.10.ods  budget.2025.11.ods  budget.2025.12.ods  budget.2026.01.ods  budget.2026.04.ods  budget.2026.05.ods
psychological/: g.SAuron.und.füchschen--0.0.4.txt  m.SAuron.und.füchschen--0.0.4.txt
tagebuch/: README.md  TatverdachtGegenHerrDrHansjuergPfisterer.odt  VSTs.txt  macbeth-weisse-und-schwarze-hexen.txt  memento-happySlappingVideos-praegung-abrichtung-revictimizing.txt  results.txt  tagebuch.txt
tools/: 1600.sh  README.md  TOSLINK.audio.sh  alsa.combined.soundcard.sh  alsa.new.combined.soundcard.sh  audio-restart.sh  blacklist.sh  colors.sh  fstab.txt  ged.sh  (+13 more)
unsorted/docs/broken2/: 110105.txt  130312.txt  130321.txt  130620b.txt  141025.txt  150205.txt  150404.txt  150523.txt  150611.txt  190914.txt  191212.txt  191214.txt  2013a.txt  2023-02-09 05-14-25.txt  20230318.txt  2026-01-10 19-47-15.mkv  365g.temp.txt  457g.temp.txt  ACTA.ACO.routing--QUESTIONMARK--0.0.2.txt  CCC-todo.txt  JVA  Stimme, meine pflege hätte bis jetzt ein.txt  Trigger.txt  Trigger2.txt  Unter der ANGENOMMENEN.txt  Untitled Document 2d  Versicherung.wicghtiger.als.spital$  Zampano.txt  adsgdfsg  ai.slop.psywar.txt  alainTuring  amokfarten-veruebt-druch-die-schweizer-armee  amoklauf.durch.ritter.verursacht.4.txt  asdfasd  asm  autismus.txt  bhf  blackfandiamond.und.user.mit.zielvektor.irgendwo.hin-quotes.erziehen.quotes-0.0.4.txt  blume  bonsi-algorithmus.txt  (+81 more)
(+1664 files in other folders)
