


HackersCardgame.org wünscht einen guten Wochenstart.

Und hat eine tolle Idee für Nerds welche auch elektronische Musik machen

Im Track ...

 Dune -- So beautaful [1]

... ab ca (0:27) hat es dezent im Hintergrund einen Breakbeat. Und der ist nicht Auffällig wie die Beat's von zB Tief-und-Ton [2] aber echt toll

[1] https://www.youtube.com/watch?v=SvixVGkfa-c (0:27)

[2] Tief und Ton finde ich schon auch toll, ist einfach ein anderer "Use Case", also eher so Party Musik als Lougue Musik.

Zumindest ich habe schon als Kind viel gelernt über Musik in dem ich bekannte Musik veruscht habe nachzuspielen am Klavier, dann auch mit Musik-Software, MIDI und Synthesizern.



